<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Widget.Material3.CardView.Outlined"
    app:strokeColor="?attr/colorSecondary"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp"
    android:alpha=".8"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    tools:showIn="@layout/content_main">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:text="@string/one"
            style="@style/BorderlessButton13Stones" />
        <Button
            style="@style/BorderlessButton13Stones"
            android:text="@string/two"/>
        <Button
            style="@style/BorderlessButton13Stones"
            android:text="@string/three"/>

    </LinearLayout>
</com.google.android.material.card.MaterialCardView>